--- a/esp32_heating/main/CMakeLists.txt
+++ b/esp32_heating/main/CMakeLists.txt
@@ -8,9 +8,10 @@ set(srcs_oled
 )
 
 set(srcs_render
+    "render/render_main.cpp"
+    "render/render_menu.cpp"
     "render/menuobj.cpp"
     "render/bitmap.cpp"
-    "render/render_task.cpp"
     "render/ExternDraw.cpp"
 )
 
@@ -30,6 +31,14 @@ set(srcs_nvs
     "nvs/nvs.cpp"
 )
 
-idf_component_register(SRCS "app_main.cpp" "${srcs_rotary}" "${srcs_oled}" "${srcs_render}" "${srcs_tools}" "${srcs_event}" "${srcs_shell}" "${srcs_nvs}"
-                    INCLUDE_DIRS "." "rotary" "oled" "render" "tools" "event" "shell" "nvs"
-                    REQUIRES spi_flash u8g2 console vfs nvs_flash)
+set(srcs_logic
+    "logic/logic_task.cpp"
+)
+
+set(srcs_pwm
+    "pwm/pwm.cpp"
+)
+
+idf_component_register(SRCS "app_main.cpp" "${srcs_rotary}" "${srcs_oled}" "${srcs_render}" "${srcs_tools}" "${srcs_event}" "${srcs_shell}" "${srcs_nvs}" "${srcs_logic}" "${srcs_pwm}"
+                    INCLUDE_DIRS "." "rotary" "oled" "render" "tools" "event" "shell" "nvs" "logic" "pwm"
+                    REQUIRES spi_flash u8g2 console vfs nvs_flash PIDv1)
