--- a/esp32_heating/main/CMakeLists.txt
+++ b/esp32_heating/main/CMakeLists.txt
@@ -10,6 +10,7 @@ set(srcs_oled
 set(srcs_render
     "render/render_main.cpp"
     "render/render_menu.cpp"
+    "render/render_screensavers.cpp"
     "render/menuobj.cpp"
     "render/bitmap.cpp"
     "render/ExternDraw.cpp"
@@ -17,10 +18,6 @@ set(srcs_render
 
 set(srcs_tools
     "tools/mathFun.cpp"
-)
-
-set(srcs_event
-    "event/event.cpp"
 )
 
 set(srcs_shell
@@ -33,6 +30,7 @@ set(srcs_nvs
 
 set(srcs_logic
     "logic/logic_task.cpp"
+    "logic/pidCtl.cpp"
 )
 
 set(srcs_pwm
@@ -43,6 +41,14 @@ set(srcs_ws28122
     "ws2812/ws2812.cpp"
 )
 
-idf_component_register(SRCS "app_main.cpp" "${srcs_rotary}" "${srcs_oled}" "${srcs_render}" "${srcs_tools}" "${srcs_event}" "${srcs_shell}" "${srcs_nvs}" "${srcs_logic}" "${srcs_pwm}" "${srcs_ws28122}"
-                    INCLUDE_DIRS "." "rotary" "oled" "render" "tools" "event" "shell" "nvs" "logic" "pwm" "ws2812"
-                    REQUIRES spi_flash u8g2 console vfs nvs_flash PIDv1)
+set(srcs_max6675
+    "max6675/max6675.cpp"
+)
+
+set(srcs_adc
+    "adc/adc_task.cpp"
+)
+
+idf_component_register(SRCS "app_main.cpp" "${srcs_rotary}" "${srcs_oled}" "${srcs_render}" "${srcs_tools}" "${srcs_shell}" "${srcs_nvs}" "${srcs_logic}" "${srcs_pwm}" "${srcs_ws28122}" "${srcs_max6675}" "${srcs_adc}"
+                    INCLUDE_DIRS "." "rotary" "oled" "render" "tools" "shell" "nvs" "logic" "pwm" "ws2812" "max6675" "adc"
+                    REQUIRES spi_flash u8g2 console vfs nvs_flash PIDv1 esp_adc_cal)
