--- a/esp32_heating/main/CMakeLists.txt
+++ b/esp32_heating/main/CMakeLists.txt
@@ -18,6 +18,7 @@ set(srcs_render
 
 set(srcs_tools
     "tools/mathFun.cpp"
+    "tools/ntc.cpp"
 )
 
 set(srcs_shell
@@ -49,6 +50,10 @@ set(srcs_adc
     "adc/adc_task.cpp"
 )
 
-idf_component_register(SRCS "app_main.cpp" "${srcs_rotary}" "${srcs_oled}" "${srcs_render}" "${srcs_tools}" "${srcs_shell}" "${srcs_nvs}" "${srcs_logic}" "${srcs_pwm}" "${srcs_ws28122}" "${srcs_max6675}" "${srcs_adc}"
-                    INCLUDE_DIRS "." "rotary" "oled" "render" "tools" "shell" "nvs" "logic" "pwm" "ws2812" "max6675" "adc"
+set(srcs_beep
+    "beep/beep.cpp"
+)
+
+idf_component_register(SRCS "app_main.cpp" "${srcs_rotary}" "${srcs_oled}" "${srcs_render}" "${srcs_tools}" "${srcs_shell}" "${srcs_nvs}" "${srcs_logic}" "${srcs_pwm}" "${srcs_ws28122}" "${srcs_max6675}" "${srcs_adc}" "${srcs_beep}"
+                    INCLUDE_DIRS "." "rotary" "oled" "render" "tools" "shell" "nvs" "logic" "pwm" "ws2812" "max6675" "adc" "beep"
                     REQUIRES spi_flash u8g2 console vfs nvs_flash PIDv1 esp_adc_cal)
